# Solomon_MVP

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
annexes/: benchmark_scenarios_divorce.md  divorce_template_families.json  divorce_template_families.md  divorce_template_family_coverage_matrix.md
archive/: integrated_draft_snapshot.md  legacy_tracker.md
docs/: # Solomon Evaluation Spec — Part II.md  00_project_overview.md  01_foundations_and_architecture.md  02_Operations and Evaluator Workflow  03_MVP Eval Intent Lock.md  04_Evaluator Tool Runbook.md  05_Divorce Practical Use Phase.md  06_Divorce Practical Review Worksheet.md  07_Reviewer Packet Format.md  08_Integration_Scoring_Model.md  09_Plugin_Domain_Scoring_Model.md  10_Trigger_Class_Test_Table.md  11_Fairness_Checks.md  99_full_spec_snapshot.md
examples/: escalation_confirmation.example.json  evaluation.example.json  expert_review.example.json
pending/: evaluator_console_requirements.md  flags.schema.json  full_spec_completion_tasklist.md  integration_scoring.md  plugin_domain_scoring.md  regression_test_protocol.md  synthetic_user_role_profile_schema.md  trigger_class_test_table.md
runtime/: __init__.py  artifacts.py  contracts.py  core.py  escalation.py  evaluator_artifact_validation.py  evaluator_operations.py  fairness_checks.py  loaders.py  normalization.py  orchestrator.py  persona_validation.py  policy_profiles.py  redaction.py  reviewer_transcript_rendering.py  session_validation.py  state.py  support_artifacts.py
schema/: case_intake_brief.schema.json  continuity_packet.schema.json  (+18 more)
(+1435 files in other folders)
